<resources>
    <string name="app_name">RelatorioDeCelula</string>
    <string name="relatorioDeCelula">Relatório de Célula</string>
    <string name="lider">Líder</string>
    <string name="quantidade_de_membros_kids_na_semana">Quantidade de Membros na Semana</string>
    <string name="quantidade_de_membros_juvs_na_semana">Quantidade de Frequentadores na Semana</string>
    <string name="quantidade_de_viditantes_na_semana">Quantidade de Visitantes na Semana</string>
    <string name="enviar">ENVIAR</string>
    <string name="digite_o_nome_do_lider">Digite o nome do Lider</string>
    <string name="quantidade_de_membros_na_celula">Quantidade de Membros na Célula</string>
    <string name="quantidade_de_frequentadores_na_celula">Quantidade de Frequentadores na Célula</string>
    <string name="quantidade_de_visitantes_na_celula">Quantidade de Visitantes na Célula</string>
    <string name="selecione_a_data_da_celula">Selecione a data da Célula</string>
    <string name="week_cell_item">Semana $1%s</string>
    <string name="members_cell_item">Membros: $1%s</string>
    <string name="regulars_cell_item">Frequentadores: $1%s</string>
    <string name="visitors_cell_item">Visitantes: $1%s</string>
    <string name="search_cells">Buscar Células</string>
</resources>