<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="24dp"
    app:cardCornerRadius="16dp"
    app:cardPreventCornerOverlap="false"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

    <TextView
        android:id="@+id/tv_week_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week_cell_item"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tv_members_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members_cell_item"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_week_detail"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        />
    <TextView
        android:id="@+id/tv_visitors_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visitors_cell_item"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_members_detail"
        android:layout_marginTop="8dp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/tv_regulars_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regulars_cell_item"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_visitors_detail"
        android:layout_marginTop="8dp"
        android:padding="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>