<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".MainActivity"
        >

        <TextView
            android:id="@+id/leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lider"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/leader"
            android:hint="@string/digite_o_nome_do_lider"/>

        <TextView
            android:id="@+id/members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/quantidade_de_membros_na_semana"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btShowCalendar"/>

        <EditText
            android:id="@+id/etMembers"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/members" />

        <TextView
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/quantidade_de_frequentadores_na_semana"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/etMembers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etRegulars"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/frequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quantidade_de_viditantes_na_semana"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/etRegulars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etVisit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/visit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <Button
            android:id="@+id/btShowCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etLeader"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/selecione_a_data_da_celula"/>

        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/enviar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>